Add colors, texts and link styles

--- a/css/style.css
+++ b/css/style.css
@@ -139,11 +139,14 @@
   background-color: rgba(37, 36, 32, 0.5);
   height: 2px;
 }
+.site-footer ul {
+  list-style: none;
+}
 ..site-footer-links{
   width: 224px;
 }
 .site-footer-links a {
-  list-style: none;
+  list-style-type: none;
   font-style: 16px;
   line-height: 19px;
   text-decoration: none;
