Add hover and acive transition

--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,19 @@ body{
   justify-content: space-between;
   background-color: #fff;
 }
+
+.logo-link{
+  transition: opacity 0.4s;
+}
+
+.logo-link:hover{
+  opacity: 0.8;
+}
+
+.logo-link:active{
+  opacity: 0.6;
+}
+
 .site-header-action{
   display: flex;
   align-items: center;
@@ -29,9 +42,14 @@ body{
   letter-spacing: 1px;
   text-transform: uppercase;
   text-decoration: none;
-
   color: #000000;
-
+  transition: color 0.4s ease;
+}
+.sitenav-link:hover{
+  color: #FF7500;
+}
+.sitenav-link:active{
+  opacity: 0.6;
 }
 .main-link{
   font-size: 13px;
@@ -39,7 +57,16 @@ body{
   color: #fff;
   background: #FF7500;
   text-decoration: none;
+  transition: opacity 0.4s ease;
 }
+.main-link:hover{
+  opacity: 0.8;
+}
+
+.main-link:active{
+  opacity: 0.6;
+}
+
 .hero{
   background-color: #000000;
   color: #fff;
@@ -176,9 +203,17 @@ body{
   line-height: 19px;
 }
 .site-footer-links a {
-  list-style-type: none;
   font-style: 16px;
   line-height: 19px;
   text-decoration: none;
   color: #252420;
+  transition: color 0.4s ease;
+}
+
+.site-footer-links a:hover{
+  color: #FF7500;
+}
+
+.site-footer-links a:active{
+  opacity: 0.6;
 }
