Remove unnecessary space under social images

--- a/css/style.css
+++ b/css/style.css
@@ -32,9 +32,19 @@ body{
   align-items: center;
 }
 .sitenav-list{
+  margin: 0;
+  margin-right: 32px;
   list-style: none;
   padding: none;
   display: flex;
+}
+
+.sitenav-item{
+  margin-right: 32px;
+}
+
+.sitenav-item:last-child{
+  margin-right: 0;
 }
 
 .sitenav-link{
@@ -92,9 +102,14 @@ body{
   font-size: 40px;
   line-height: 120%;
   letter-spacing: 0.5px;
-
+  margin-top: 0;
+  margin-bottom: 24px;
   color: #FFFFFF;
 
+.hero-text{
+  margin-top: 0;
+  margin-bottom: 32px;
+}
 
 }
 .hero-img{
@@ -119,9 +134,9 @@ body{
 }
 .features-list{
   display: flex;
+  margin: 0;
   list-style: none;
   padding: 0;
-  justify-content: space-between;
 }
 .features-icon{
   /* feature-icon */
@@ -145,6 +160,12 @@ body{
 .feature{
   width: 314px;
   height: 245px;
+  margin-right: 40px;
+
+.feature:last-child{
+  margin: 0;
+}
+
 }
 .feature-heading{
   font-family: "Roboto Condensed";
@@ -154,6 +175,8 @@ body{
   font-weight: 700;
   font-size: 24px;
   line-height: 120%;
+
+
   color: #000000;
 }
 .feature-heading1{
@@ -163,7 +186,8 @@ body{
   font-size: 72px;
   line-height: 120%;
   letter-spacing: 0.5px;
-
+  margin-top: 0;
+  margin-bottom: 72px;
   color: #000000;
 }
 
@@ -180,8 +204,22 @@ body{
   width: 440px;
 }
 .promo-heading{
+  margin-top: 0;
+  margin-bottom: 24px;
   font-size: 40px;
   line-height: 48px;
+}
+
+.promo-info-wrapper{
+  margin-bottom: 24px;
+}
+
+.promo-text{
+  margin-top: 0;
+  margin-bottom: 12px;
+}
+.promo-text:last-child{
+  margin-bottom: 0;
 }
 
 .promo-highlight{
@@ -202,13 +240,36 @@ body{
   padding: 0;
   display: flex;
   align-items: center;
+  transition: color 0.4s ease;
+  margin: 0;
 }
+.site-footer-socials a{
+  display: block;
+}
+
+.site-footer-socials svg{
+  display: block;
+}
+
+.site-footer-socials li{
+  margin-right: 16px;
+}
+.site-footer-socials li:last-child{
+  margin-right: 0;
+}
+
+.site-footer-socials:hover{
+  color: #FF7500;
+}
+
 .site-footer-top{
   display: flex;
   align-items: center;
   justify-content: space-between;
 }
 .site-footer-divider{
+  margin-top: 40px;
+  margin-bottom: 64px;
   border: 0;
   background-color: rgba(37, 36, 32, 0.5);
   height: 2px;
@@ -221,10 +282,19 @@ body{
   padding: 0;
   list-style: none;
 }
-..site-footer-links{
+.site-footer-links{
   width: 224px;
+  padding: 0;
+  list-style: none;
+  margin: 0;
+  margin-right: 68px;
   line-height: 19px;
 }
+
+.site-footer-links:last-child{
+  margin-right: 0;
+}
+
 .site-footer-links a {
   font-style: 16px;
   line-height: 19px;
