--- a/css/style.css
+++ b/css/style.css
@@ -1,18 +1,37 @@
+* {
+  box-sizing: border-box;
+}
+
+
 body{
+  padding: 0;
+  margin: 0;
   font-size: 16px;
   line-height: 1.5;
   font-family: "Roboto", "Arial",  sans-serif;
   letter-spacing: 0.5px;
 }
 
+.container{
+  width: 100%;
+  max-width: 1140px;
+  padding-left: 20px;
+  padding-right: 20px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .site-header{
-  display: flex;
-  align-items: center;
   border-top: 5px solid #FF7500;
   padding-top: 16px;
   padding-bottom: 16px;
-  justify-content: space-between;
   background-color: #fff;
+}
+
+.site-header-container{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .logo-link{
@@ -94,10 +113,14 @@ body{
   background-color: #000000;
   padding-top: ;
   color: #fff;
+}
+
+.hero-container{
   display: flex;
   align-items: center;
   justify-content: space-between;
 }
+
 .hero-heading{
   font-family: 'Roboto Condensed';
   font-style: normal;
@@ -119,11 +142,9 @@ body{
   width: 510px;
   height: 510px;
   border-radius: 8px;
+  box-shadow: 24px 24px 0 0 rgba(255, 117, , 0.6);
 }
 .hero-line{
-  /* hero-line */
-
-  position: absolute;
   width: 80px;
   height: 3px;
   left: 0px;
@@ -142,8 +163,7 @@ body{
   padding: 0;
 }
 .features-icon{
-  /* feature-icon */
-
+  margin-bottom: 32px;
   width: 100px;
   height: 100px;
 
@@ -175,13 +195,19 @@ body{
   width: 214px;
   height: 29px;
   font-style: normal;
+  margin-top: 0;
+  margin-bottom: 20px;
   font-weight: 700;
   font-size: 24px;
   line-height: 120%;
 
-
   color: #000000;
 }
+
+.feature-text{
+  margin: 0;
+}
+
 .feature-heading1{
   font-family: 'Roboto Condensed';
   font-style: normal;
@@ -196,13 +222,21 @@ body{
 
 
 .promo{
-  border-radius: 12px;
-  background-color: #252420;
-  color: #fff;
+  padding-top: 120px;
+  padding-bottom: 160px;
+
+}
+
+.promo-inner{
   display: flex;
   align-items: center;
   justify-content: space-between;
+  padding: 64px;
+  border-radius: 12px;
+  background-color: #252420;
+  color: #fff;
 }
+
 .promo-content{
   width: 440px;
 }
@@ -292,6 +326,13 @@ body{
   margin: 0;
   margin-right: 68px;
   line-height: 19px;
+}
+
+.site-footer-links li {
+  margin-bottom: 16px;
+}
+.site-footer-links li:last-child{
+  margin-bottom: 0;
 }
 
 .site-footer-links:last-child{
