update hero-img promo-img

--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,24 @@
-* {
-  box-sizing: border-box;
+
+:root{
+  --accent-color: #FF7500;
 }
 
+html {
+  box-sizing: border-box;
+  height: 100%;
+  scroll-behavior: smooth;
+}
+
+*,
+*::before,
+*::after{
+  box-sizing: inherit;
+}
 
 body{
+  display: flex;
+  flex-direction: column;
+  height: 100%;
   padding: 0;
   margin: 0;
   font-size: 16px;
@@ -22,7 +37,7 @@ body{
 }
 
 .site-header{
-  border-top: 5px solid #FF7500;
+  border-top: 5px solid var(--accent-color);
   padding-top: 16px;
   padding-bottom: 16px;
   background-color: #fff;
@@ -82,7 +97,7 @@ body{
   transition: color 0.4s ease;
 }
 .sitenav-link:hover{
-  color: #FF7500;
+  color: var(--accent-color);
 }
 .sitenav-link:active{
   opacity: 0.6;
@@ -95,7 +110,7 @@ body{
   font-weight: bold;
   line-height: 15px;
   color: #fff;
-  background: #FF7500;
+  background: var(--accent-color);
   text-decoration: none;
   transition: opacity 0.4s ease;
 }
@@ -111,11 +126,11 @@ body{
   padding-top: 80px;
   padding-bottom: 80px;
   background-color: #000000;
-  padding-top: ;
   color: #fff;
 }
 
 .hero-container{
+  position: relative;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -132,17 +147,21 @@ body{
   margin-bottom: 24px;
   color: #FFFFFF;
 
+}
 .hero-text{
   margin-top: 0;
   margin-bottom: 32px;
 }
 
-}
+
 .hero-img{
+  position: absolute;
+  top: -40px;
+  right: 20px;
   width: 510px;
   height: 510px;
   border-radius: 8px;
-  box-shadow: 24px 24px 0 0 rgba(255, 117, , 0.6);
+  box-shadow: 24px 24px 0 0 rgba(255, 117, 0, 0.6);
 }
 .hero-line{
   width: 80px;
@@ -150,7 +169,7 @@ body{
   left: 0px;
   top: 0px;
 
-  background: #FF7500;
+  background: var(--accent-color);
 }
 .features{
   padding-top: 210px;
@@ -184,12 +203,12 @@ body{
   width: 314px;
   height: 245px;
   margin-right: 40px;
-
+}
 .feature:last-child{
   margin: 0;
 }
 
-}
+
 .feature-heading{
   font-family: "Roboto Condensed";
   width: 214px;
@@ -228,6 +247,7 @@ body{
 }
 
 .promo-inner{
+  position: relative;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -260,9 +280,12 @@ body{
 }
 
 .promo-highlight{
-  color: #FF7500;
+  color: var(--accent-color);
 }
 .promo-img{
+  position: absolute;
+  bottom: 64px;
+  right: 64px;
   border-radius: 12px;
   width: 440px;
   height: 440px;
@@ -296,7 +319,7 @@ body{
 }
 
 .site-footer-socials:hover{
-  color: #FF7500;
+  color: var(--accent-color);
 }
 
 .site-footer-top{
@@ -348,7 +371,7 @@ body{
 }
 
 .site-footer-links a:hover{
-  color: #FF7500;
+  color: var(--accent-color);
 }
 
 .site-footer-links a:active{
